--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <mat-toolbar color="primary">  
   <mat-toolbar-row>
-    <span><a mat-button routerLink="/">{{ name }}</a></span> 
+    <span><a id="title" mat-button routerLink="/">{{ name }}</a></span> 
     <span class="example-fill-remaining-space"></span>
     <span> <a routerLink="menu" mat-button>MENU</a> </span> 
     <span> <a routerLink="hours" mat-button>HOURS</a> </span> 
     <span> <a routerLink="location" mat-button>LOCATION</a> </span>
     <span> <a routerLink="order" mat-button>ORDER</a> </span>
+    <span> <a routerLink="menu/add" mat-button>ADD MENU ITEM</a> </span>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
