--- a/angular/src/app/hours/hours.component.html
+++ b/angular/src/app/hours/hours.component.html
@@ -4,3 +4,4 @@
     <li *ngFor="let day of hours"> {{day.dayOfWeek}}: {{day.open}} - {{day.close}}</li>
   </ul>
 </mat-card>
+<app-update-hours *ngIf="hours" [prevHours]="hours"></app-update-hours>
