--- a/angular/src/app/hours/update/update.component.html
+++ b/angular/src/app/hours/update/update.component.html
@@ -1,10 +1,10 @@
 <mat-card>
-  <ul>
-    <li *ngFor="let day of Object.keys(hours)">
-      {{ day }}:
-      <br />
+  <mat-list>
+    <mat-list-item *ngFor="let day of Object.keys(hours)">
+      <span matLine>{{ day.toUpperCase() }}:</span>
       <mat-form-field>
         <input
+          matLine
           matInput
           type="number"
           placeholder="open"
@@ -13,13 +13,14 @@
       </mat-form-field>
       <mat-form-field>
         <input
+          matLine
           matInput
           type="number"
           placeholder="close"
           [formControl]="hours[day].close"
         />
       </mat-form-field>
-    </li>
-  </ul>
+    </mat-list-item>
+  </mat-list>
   <button mat-button (click)="onUpdate()">Update</button>
 </mat-card>
